<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="20dp"
    android:background="@color/white"
    android:elevation="10dp"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="400dp">

        <RelativeLayout
            android:id="@+id/rlayHeader"
            android:orientation="horizontal"
            android:background="@drawable/silver_bg_rectangular_shape"
            android:layout_width="match_parent"
            android:layout_alignParentTop="true"
            android:paddingLeft="20dp"
            android:layout_height="60dp">

            <ImageView
                android:id="@+id/ivQuestionMark"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/ivQuestionMark"
                android:text="@string/kaise_khele"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/ivCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_gravity="center_vertical"
                android:padding="20dp"
                android:src="@drawable/cancel" />
        </RelativeLayout>

        <LinearLayout
            android:padding="10dp"
            android:layout_marginTop="60dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/rule_1"
                        android:textColor="@color/black"
                        android:textSize="16dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/rule_2"
                        android:textColor="@color/black"
                        android:textSize="16dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/rule_3"
                        android:textColor="@color/black"
                        android:textSize="16dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/rule_4"
                        android:textColor="@color/black"
                        android:textSize="16dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/rule_5"
                        android:textColor="@color/black"
                        android:textSize="16dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/rule_6"
                        android:textColor="@color/black"
                        android:textSize="16dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/rule_7"
                        android:textColor="@color/black"
                        android:textSize="16dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/rule_8"
                        android:textColor="@color/black"
                        android:textSize="16dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/rule_9"
                        android:textColor="@color/black"
                        android:textSize="16dp" />
                </LinearLayout>


            </androidx.core.widget.NestedScrollView>



        </LinearLayout>



    </RelativeLayout>


</androidx.cardview.widget.CardView>