<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frameLayRule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_curve_silver">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="240dp"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivRule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                app:srcCompat="@drawable/ic_question" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/ivRule"
                android:text="@string/kheilne_ka_tarika"
                android:textColor="@color/black"
                android:textSize="19dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_curve_shape_">

            <RelativeLayout
                android:id="@+id/rLayToolBar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_back_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:padding="20dp"
                    app:srcCompat="@drawable/ic_back_btn"/>


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivLeaderBoard"
                    android:layout_width="wrap_content"
                    android:visibility="invisible"
                    android:layout_height="match_parent"
                    android:layout_toStartOf="@+id/ivSetting"
                    android:paddingLeft="20dp"
                    android:paddingTop="20dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="10dp"
                    app:srcCompat="@drawable/ic_trophy" />


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivSetting"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="20dp"
                    android:paddingTop="20dp"
                    android:layout_toStartOf="@+id/rootView"
                    android:paddingRight="20dp"
                    android:paddingBottom="10dp"
                    app:srcCompat="@drawable/ic_setting" />

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="28dp"
                    android:padding="1dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:background="#4267B2"
                    android:id="@+id/rootView"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:id="@+id/llHindi"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/shabdjaal_white_langugage_bg">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:id="@+id/tvHindi"
                            android:text="Hindi"
                            android:textColor="@color/black"
                            android:textSize="11sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llEng"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/shabdjaal_black_language_bg">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:id="@+id/tvEng"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:textColor="@color/white"
                            android:text="English"
                            android:textSize="11sp"/>
                    </LinearLayout>
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivLangChange"
                    android:layout_width="50dp"
                    android:visibility="gone"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="10dp"
                    app:srcCompat="@drawable/white_icon_language" />

            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvVargPaheli"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rLayToolBar"
                android:layout_centerInParent="true"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/mukta_bold"
                android:text="@string/shabdjal"
                android:textColor="@color/white"
                android:textSize="35dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvVArgPhaleiSubText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvVargPaheli"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:text="@string/har_roj_ek_nai_paheli"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <RelativeLayout
                android:layout_width="100dp"
                android:visibility="invisible"
                android:layout_height="40dp"
                android:layout_below="@+id/tvVArgPhaleiSubText"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="19dp"
                android:background="@drawable/silver_curve_button"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mukta_medium"
                    android:text="10 x 10"
                    android:textColor="@color/black"
                    android:textSize="15dp" />
            </RelativeLayout>

        </RelativeLayout>
    </FrameLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rlNext"
        android:layout_below="@+id/frameLayRule"
        android:layout_marginBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/rule_1"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/rule_2"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/rule_3"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/rule_4"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/rule_5"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/rule_6"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/rule_7"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/rule_8"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/rule_9"
                android:textColor="@color/black"
                android:textSize="16dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <RelativeLayout
        android:id="@+id/rlNext"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/rLayCheckBox"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/black_curve_button"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aage_pbhe"
            android:textColor="@color/white"
            android:textSize="17dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rLayCheckBox"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="20dp">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/agli_bar_na_dikaye"
            android:textColor="@color/black"
            android:textSize="13dp" />

    </RelativeLayout>


</RelativeLayout>